2007-07-10  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_form_unwind_protect): unwind-protect
	special form

2007-07-09  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h (DFSCH_UNWIND): unwind-protect like construction
	for C code.

2007-07-01  Ales Hakl  <ales at hakl dot net>

	* src/repl.c: Transcript support

2007-06-24  Ales Hakl  <ales at hakl dot net>

	* lib/unix.c (native_isatty): isatty() wrapper
	(native_kill, native_killpg): kill and killpg wrappers
	(native_raise): raise wrapper
	(native_sig): signal name to number conversion
	(native_open): open() wrapper
	(native_creat): creat() wrapper
	(native_read): read() wrapper
	(native_write): write() wrapper
	(native_chdir): access() wrapper 
	(native_unlink): unlink() wrapper
	(native_rename): rename() wrapper
	(native_rmdir): rmdir() wrapper

	* src/dfsch.c (dfsch_compare_symbol): symbol-string comparison

	* lib/unix.c (dfsch_unix_register): unix syscall interface (some
	basic IO calls are missing for now) 

2007-06-14  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h: added comment describing purpose, use and
	ugliness of this file

	* dfsch/lib/load.h, dfsch/parse.h, dfsch/hash.h, dfsch/number.h:
	added file description

	* dfsch/dfsch.h: removed redundant declaration of dfsch_env_get()

2007-03-06  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_exception_write): removed redundant ew_ctx_t

2007-02-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_eval_proc_impl): reset break flag _BEFORE_
	throwing exception

2007-02-24  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm ("object subsystem"): basic tests of object subsystem

2007-02-20  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c (dfsch_channel_create): use finalized
	synchronization primitives

2007-02-20  Ales Hakl  <ales at hakl dot net>

	* src/util.c (dfsch__create_finalized_mutex): finalized mutexes as
	sepparate objects (in order to break finalization cycles)
