@@ -49,13 +49,17 @@ dfsch_object_t* dfsch_make_promise(dfsch_object_t* expr, dfsch_object_t* env){
 }
 
 dfsch_object_t* dfsch_force_promise(dfsch_object_t* promise){
+  object_t* val;
   promise_t* p = (promise_t*)promise;
   if (promise->type != &promise_type)
     dfsch_throw("exception:not-a-promise", promise);
 
   if (!p->set){
-    p->value = dfsch_eval_proc(p->expr, p->env);
-    p->set = 1;
+    val = dfsch_eval_proc(p->expr, p->env);
+    if (!p->set){
+      p->set = 1;
+      p->value = val;
+    }
   }
 
   return p->value;
